# lovcode

./: .npmrc  .prettierignore  CHANGELOG.md  CLAUDE.md  ENGINEERING_ROADMAP.md  LICENSE  README.md  design-guide.md  eslint.config.js  float.html  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  release.yml
coverage/: coverage-final.json  coverage-summary.json  index.html
coverage/components/: ErrorBoundary.tsx.html  index.html
coverage/components/ui/: button.tsx.html  index.html
coverage/hooks/: index.html  useAppNavigation.ts.html  useNavigate.ts.html
coverage/lib/: errorHandler.ts.html  index.html  utils.ts.html
coverage/store/: index.html  index.ts.html
coverage/store/atoms/: app.ts.html  chat.ts.html  commands.ts.html  components.ts.html  fileTree.ts.html  home.ts.html  index.html  knowledge.ts.html  settings.ts.html  ui.ts.html  workspace.ts.html
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md
e2e/: app.spec.ts
scripts/: bump-version.cjs
src/: App.tsx  CLAUDE.md  float-main.tsx  index.css  main.tsx
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: diagnostics.rs  errors.rs  executor_profiles.json  hook_watcher.rs  lib.rs  logging.rs  main.rs  pty_manager.rs  security.rs  types.rs  workspace_store.rs
src-tauri/src/commands/: agents.rs  context.rs  diagnostics.rs  executors.rs  files.rs  git.rs  hooks.rs  knowledge.rs  local_commands.rs  mod.rs  projects.rs  pty.rs  report.rs  sessions.rs  settings.rs  version.rs  workspace.rs
src-tauri/src/commands/marketplace/: install.rs  loader.rs  mod.rs  statusline.rs  types.rs
src-tauri/src/services/: mod.rs  search.rs
src/components/: AppRouter.tsx  CLAUDE.md  ContextFileItem.tsx  DocumentReader.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  FloatWindow.tsx
src/components/GlobalHeader/: FeatureTab.tsx  FeatureTabGroup.tsx  GlobalFeatureTabs.tsx  GlobalHeader.tsx
src/components/PanelGrid/: PanelGrid.tsx  SessionPanel.tsx
src/components/Terminal/: TerminalPane.tsx  index.ts  terminalPool.ts
src/components/config/: index.tsx
src/components/dialogs/: AppSettingsDialog.tsx  ProfileDialog.tsx  index.ts
src/components/home/: ActivityHeatmap.tsx  CommandTrendChart.tsx  FeaturedCarousel.tsx  QuickActions.tsx  RecentActivity.tsx  index.ts
src/components/shared/: BrowseMarketplaceButton.tsx  CollapsibleCard.tsx  FeatureButton.tsx  FilePath.tsx  index.ts
src/components/ui/: new-terminal-button.tsx
src/constants/: index.ts
src/context/: AppConfigContext.tsx  index.ts
src/hooks/: CLAUDE.md  index.ts  useAppNavigation.test.ts  useAppNavigation.ts  useFeatureCreation.ts  useNavigate.test.ts  useNavigation.ts  usePersistedState.ts
src/lib/: analytics.ts  errorHandler.test.ts  errorHandler.ts  logger.ts  sentry.ts  utils.test.ts  webVitals.ts
src/store/: CLAUDE.md  index.ts
src/store/atoms/: chat.ts  commands.ts  components.ts  home.ts  knowledge.ts  settings.ts  ui.ts  workspace.ts
src/test/: setup.ts
src/types/: index.ts
src/views/: CLAUDE.md  LazyViews.tsx  index.ts
src/views/AnnualReport/: AnnualReport2025.tsx  index.ts
src/views/Chat/: CollapsibleContent.tsx  CopyButton.tsx  ExportDialog.tsx  MessageView.tsx  ProjectList.tsx  SessionList.tsx  VirtualChatList.tsx  index.ts  types.ts  utils.ts
src/views/Commands/: CommandDetailView.tsx  CommandItemCard.tsx  CommandsToolbar.tsx  CommandsView.tsx  DeprecateDialog.tsx  DraggableCommandItem.tsx  DroppableFolder.tsx  MoveDialog.tsx  RootDropZone.tsx  index.ts  types.ts
src/views/FeatureTodo/: FeatureTodo.tsx  index.ts
src/views/Home/: Home.tsx
src/views/Hooks/: HooksView.tsx  index.ts
src/views/Knowledge/: DistillDetailView.tsx  DistillMenu.tsx  DistillView.tsx  ReferenceView.tsx  index.ts
src/views/Marketplace/: MarketplaceView.tsx  TemplateDetailView.tsx  index.ts
src/views/Mcp/: McpView.tsx
src/views/OutputStyles/: OutputStylesView.tsx  index.ts
(+34 files in other folders)
