[package]
name = "lovcode"
version = "0.23.4"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lovcode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
regex = "1"
lazy_static = "1"
tantivy = "0.22"
jieba-rs = "0.7"
notify = "7"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["sync", "io-util", "time", "process"] }
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
arboard = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

# 更好的错误处理
[dependencies.thiserror]
version = "1"

[dependencies.anyhow]
version = "1"

# Clippy 严格模式 - 渐进式启用
[lints.clippy]
# === 核心安全规则 (deny 级别) ===
unwrap_used = "deny"           # 禁止 .unwrap() - 必须处理错误
panic = "deny"                 # 禁止显式 panic! - 使用 Result
indexing_slicing = "warn"      # 警告直接索引 - 可能越界

# === 代码质量规则 (warn 级别) ===
expect_used = "warn"           # 警告 .expect() - 逐步消除
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# === 允许的例外 (现实妥协) ===
too_many_lines = "allow"       # 暂时允许长函数
module_name_repetitions = "allow"
missing_errors_doc = "allow"   # 暂时允许缺少错误文档
missing_panics_doc = "allow"   # 暂时允许缺少 panic 文档
needless_pass_by_value = "allow" # 部分场景需要
doc_markdown = "allow"         # 文档格式暂不强制

[lints.rust]
unsafe_code = "warn"           # 警告 unsafe 代码

[dev-dependencies]
tempfile = "3.24.0"

